--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+
+body {
+  --text-color: #222;
+  --bkg-color: #fff;
+}
+body.dark-theme {
+  --text-color: #eee;
+  --bkg-color: #121212;
+} 
+
+body {
+  background: var(--bkg-color);
+}
+
+* {
+  color: var(--text-color);
+}
+
+img {
+  width: 200px;
+  height: 200px;
+}
+
+button {
+  color: #222;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -42,7 +68,7 @@ a:hover{
 
 footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
   padding: 2rem;
   position: relative;
@@ -50,11 +76,12 @@ footer {
   width: 90%;
   height: 40px;
   margin-top: 2rem;
+  background-color: red;
 }
 
 footer > img{
-  width: 200px;
-  margin: 0;
+  width: 100px;
+  height: auto;
 }
 footer > p{
   margin: 0;
@@ -80,6 +107,8 @@ form{
   border: 0.5px solid rgb(136, 136, 136);
 }
 
+
+
 .card:hover{
   border: 0.5px solid rgb(206, 217, 142);
 }
@@ -92,6 +121,8 @@ form{
   height: auto;
   flex-wrap: wrap;
   margin: 0 auto;
+  text-align-last: center;
+  padding-bottom: 10px;
 }
 
 table {
@@ -111,12 +142,13 @@ td, th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+ 
 }
 
-.dark{
-  background-color: #12121296;
-  color: white;
+input {
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
-.dark > a {
-  color: white;
-}
+
+
+
